styles.css
html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  font-family: 'Lato', sans-serif;
  margin: auto;
  max-width: 1440px;
}

/*MAIN GRID ELEMENTS*/
main {
  display: grid;
  grid-template-areas: 
    "menu search search"
    "menu tablet tablet"
    "menu info info"
    "menu nav nav"
    "menu graph graph"
    "menu job social";
  grid-template-columns: 175px 1fr 1fr;
}

a {
  text-decoration: none;
  color: #58bbf8;
}

/*LEFT MENU*/
.menu-container {
  background-color: #354051;
  grid-area: menu;
} 

.profile-box{
  align-items: center;
  border-bottom: 2px solid #2c3644;
  display: flex;
  flex-direction: column;
}

/*PROFILE PIC AREA*/
.profile-image {
  border-radius: 100%;
  height: 95px;
  margin-top: 30px;
  width: 95px;
}

.profile-name {
  color: #bfc7d4;
  padding: 20px 0 30px 0;
  font-weight: 300;
}

.profile-name:hover {
  color: white;
}

.profile-icon {
  padding-left: 10px;
}

.menu-boxes {
  border-bottom: 2px solid #2c3644;
}

.menu-section-headings {
  color: #66748b;
  margin: 20px 0 20px 20px;
  font-size: 13px;
  font-weight: 900;
}

.menu-section-headings:hover {
  color: white;
}

.menu-icons{
  padding-right: 15px;
}


.menu-btns {
  align-items: center;
  color: #9eaabc;
  border-left: 5px solid transparent;
  display: flex;
  height: 35px;
  font-size: 14px;
  font-weight: 700;
  padding: 0 20px 0 20px;
  text-align: left;
  width: 175px;
}

.menu-btns:hover {
  border-left: 5px solid #25a6f7;
  color: white;
}

.last-btn {
  margin-bottom: 20px;
}

/*CHECKBOXES*/
.checkboxes {
  align-items: center;
  color: #9ca7b9;
  display: flex;
  height: 35px;
  font-size: 13px;
  font-weight: 900;
}

.checkboxes:hover {
  color: white;
}

.checks {
  border-radius: 3px;
  display: inline-block;
  padding: 8px;
  margin: 0 13px 0 20px;
  position: relative;
  -webkit-appearance: none;
}

.admin-check {
  background-color: #fed432;
}

.admin-check:checked {
  background-color: #fed432;
  color: #99a1a7;
}

.admin-check:checked:after {
  color: #354051;
  content: '\2714';
  font-size: 14px;
  left: 3px;
  position: absolute;
  top: 0px;
}

.design-check {
  background-color: #35b1fc;
}

.design-check:checked {
  background-color: #35b1fc;
  color: #99a1a7;
}

.design-check:checked:after {
  color: #354051;
  content: '\2714';
  font-size: 14px;
  left: 3px;
  position: absolute;
  top: 0px;
}

.exec-check {
  background-color: #e52062;
}

.exec-check:checked {
  background-color: #e52062;
  color: #e52062;
}

.exec-check:checked:after {
  color: #354051;
  content: '\2714';
  font-size: 14px;
  left: 3px;
  position: absolute;
  top: 0px;
}

.hr-check {
  background-color: #19a889;
}

.hr-check:checked {
  background-color: #19a889;
  color: #e52062;
}

.hr-check:checked:after {
  color: #354051;
  content: '\2714';
  font-size: 14px;
  left: 3px;
  position: absolute;
  top: 0px;
}

.last-check {
  margin-bottom: 20px;
}

/*TOP SEARCH BAR*/
.search-container {
  grid-area: search;
}

.nav-search-bar {
  display: grid;
  grid-template-areas: 
  "popout srcbar prof cal options";
  grid-template-columns: 60px 1fr 60px 60px 60px;
}

.search-icons{
  align-items: center;  
  border: 1px solid #eff1f3;
  color: #7b8593;
  display: flex;
  font-size: 25px;
  justify-content: center;
  height:100%;
  width: 100%;
}

.search-icons:hover{
  background-color: #25a6f7;
  border: 1px solid #25a6f7;
  color: white;
}

.popout {
  grid-area: popout;
}

.srcbar {
  grid-area: srcbar
}

.search-bar-input {
  border: 1px solid #eff1f3;
  height: 60px;
  font-family: 'Font Awesome 5 Free', 'Lato', sans-serif;
  font-size: 20px;
  padding-left: 25px;
  width:100%; 
}

.popout-btn:hover{
  color: white;
}

.prof {
  grid-area: prof;
}

.cal {
  grid-area: cal;
}

.options {
  grid-area: options;
}

/*JOB LISTING TITLE*/
.info-container {
  display: flex;
  grid-area: info;
  justify-content: space-between;
  margin-bottom: 10px;
}

.job-listing {
  margin: 25px 0 25px 40px;
  }

.job-title {
  color: #595c68;
  font-size: 25px;
  margin-bottom: 10px;
}

.job-title-details {
  align-items: center;
  color:#8a95a4;
  display: flex;
}

.location-icon {
  padding-right: 5px;
}

.bullet-small {
  padding-left: 10px;
  padding-right: 10px;
  font-size: 7px;
}

.job-info-buttons {
  align-items: center;
  display: flex;
  margin-right: 20px;
}

.open-button {
  align-items: center;
  border: 2px solid #eff1f3;
  border-radius: 20px;
  color: #707b8b;
  display: flex;
  font-size: 13px;
  font-weight: 800;
  height: 40px;
  justify-content: center;
  margin-right: 15px;
  width: 95px;
}

.dot {
  color: #8ec447;
  padding-right: 7px;
}

.small-buttons {
  align-items: center;
  border: 2px solid #eff1f3;
  border-radius: 100%;
  color: #9ba3ae;
  display: flex;
  height: 40px;
  justify-content: center;
  margin-right: 15px;
  width: 40px;
}

/* NAV TABS CONTAINER */
.nav-container {
  grid-area: nav;
}

.tabs {
  display: flex;
  margin-left: 15px;
}

.tab-btns {
  color: #9eaabc;
  border-left: 5px solid transparent;
  height: 35px;
  font-size: 14px;
  font-weight: 700;
  padding: 0 25px 0 25px;
}

.tab-btns:hover {
  border-bottom: 5px solid #25a6f7;
  color: #4e515e;
}

/* GRAPH AREA */
.graph-container {
  background-color: #ecf2f6;
  display: grid;
  grid-area: graph;
  grid-template-areas: 
  "prog bar"
  "button1 button2"
  "line line";
  padding-bottom: 20px;
}

/* CIRCLE GRAPH AREA */
.circle-graph-area {
  display: flex;
  grid-area: prog;
  margin-left: 50px;
  margin-top: 50px;
  margin-right: 30px;
}

.circular-chart {
  display: block;
  margin: 10px auto;
  max-width: 80%;
  max-height: 150px;
}

.circular-chart {
  display: block;
  margin: 10px auto;
  max-width: 80%;
  max-height: 165px;
}

.circle-bg {
  fill: none;
  stroke: #d8e3eb;
  stroke-width: 3.8;
}

.circle {
  fill: none;
  stroke-width: 3.8;
  stroke-linecap: round;
  animation: progress 1s ease-out forwards;
}
/* ... */

